# legit

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md
.legit/: config.yaml
.legit/embeddings/bgrant0607/: metadata.json  model_info.json  vectors.npz
.legit/embeddings/lavalamp/: metadata.json  model_info.json  vectors.npz
.legit/embeddings/liggitt/: metadata.json  model_info.json  vectors.npz
.legit/embeddings/thockin/: metadata.json  model_info.json  vectors.npz
.legit/embeddings/wdbaruni/: model_info.json  vectors.npz
.legit/expertise/bgrant0607/: expertise.json
.legit/expertise/lavalamp/: expertise.json
.legit/expertise/liggitt/: expertise.json
.legit/expertise/thockin/: expertise.json
.legit/expertise/wdbaruni/: expertise.json
openspec/: config.yaml
openspec/changes/build-time-knowledge-precompute/: adversarial-review.md  design.md  proposal.md  tasks.md
openspec/changes/initial-legit-tool/: design.md  proposal.md  tasks.md
openspec/changes/initial-legit-tool/specs/calibration/: spec.md
openspec/changes/initial-legit-tool/specs/cli-interface/: spec.md
src/legit/: __init__.py  calibrate.py  cli.py  config.py  embeddings.py  expertise.py  github_client.py  model_runner.py  models.py  profile.py  retrieval.py  review.py  web.py
src/legit/templates/: index.html
tests/: conftest.py  sample_prs.py  test_cli.py  test_config.py  test_expertise.py  test_github_client.py  test_integration_pipeline.py  test_integration_web.py  test_models.py  test_profile.py  test_retrieval.py  test_review.py
(+7 files in other folders)
